<resources>
    <string name="app_name">BDK Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BDK Wallet</string>
    <string name="nav_header_subtitle">github.com/maikerlab/BitcoinWallet</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_mempool">Mempool</string>
    <string name="balance_sats">%s sats</string>
    <string name="network">Testnet</string>
    <string name="address">tb1...</string>
    <string name="get_new_address">Get new address</string>
    <string name="sync_wallet">Sync</string>
    <string name="undefined">-</string>
    <string name="sync_progress_percent">%d %%</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="network_header">Network</string>
    <string name="sync_header">Sync</string>

    <!-- Network Preferences -->
    <string name="electrum_url">Electrum Server</string>
    <string name="mempool_url">Mempool</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="block_height_val">%d</string>
    <string name="my_keys">My Keys</string>
    <string name="mempool_difficulty">%d blocks until %.1f %% change</string>
</resources>