<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletFragment">

    <LinearLayout
        android:id="@+id/ll_wallet_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wallet Tools"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btn_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_wallet"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/btn_new_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_new_address"
            />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/tv_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/network" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/balance_sats"/>

    </LinearLayout>

</FrameLayout>