<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bitcoinwallet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wallet_start"
        android:name="com.example.bitcoinwallet.ui.wallet.WalletStartFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet_start" >
        <action
            android:id="@+id/action_nav_wallet_start_to_nav_wallet"
            app:destination="@id/nav_wallet" />
    </fragment>

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.bitcoinwallet.ui.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" >
        <action
            android:id="@+id/action_nav_wallet_to_nav_wallet_start"
            app:destination="@id/nav_wallet_start" />
        <argument
            android:name="key"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_mempool"
        android:name="com.example.bitcoinwallet.ui.mempool.MempoolFragment"
        android:label="@string/menu_mempool"
        tools:layout="@layout/fragment_mempool" />
</navigation>